test fonts update

--- a/public/mcapp/css/create-style.css
+++ b/public/mcapp/css/create-style.css
@@ -6,7 +6,8 @@ html {
 }
 
 body {
-	margin: 0
+	margin: 0;
+	font-family: sans-serif;
 }
 
 article,
@@ -7455,7 +7456,7 @@ button.close {
 	margin: 1px;
 	text-indent: -999px;
 	cursor: pointer;
-	background-color: #000\9;
+	background-color: #0009;
 	background-color: transparent;
 	border: 1px solid #fff;
 	border-radius: 10px
