updates in fonts

--- a/public/mcapp/css/create-style.css
+++ b/public/mcapp/css/create-style.css
@@ -17296,3 +17296,7 @@ abbr[title] {
     color: currentColor;
     font-weight: 600;
 }
+
+.options-personalizationstring {
+	font-family: sans-serif;
+}
