--- a/public/mcapp/css/create-style.css
+++ b/public/mcapp/css/create-style.css
@@ -1,13 +1,13 @@
 
 html {
-	font-family: sans-serif;
+	font-family: museo_sans300;
 	-webkit-text-size-adjust: 100%;
 	-ms-text-size-adjust: 100%
 }
 
 body {
 	margin: 0;
-	font-family: sans-serif;
+	font-family: museo_sans300;
 }
 
 article,
@@ -1353,7 +1353,7 @@ html {
 }
 
 body {
-	font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+	font-family: museo_sans300;
 	font-size: 14px;
 	line-height: 1.42857143;
 	color: #333;
@@ -6997,7 +6997,7 @@ button.close {
 	position: absolute;
 	z-index: 1070;
 	display: block;
-	font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+	font-family: museo_sans300;
 	font-size: 12px;
 	font-style: normal;
 	font-weight: 400;
@@ -7131,7 +7131,7 @@ button.close {
 	display: none;
 	max-width: 276px;
 	padding: 1px;
-	font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+	font-family: museo_sans300;
 	font-size: 14px;
 	font-style: normal;
 	font-weight: 400;
@@ -17232,7 +17232,7 @@ a.af-core.link-with-arrow.left:hover i.arrow:before {
 }
 
 body {
-    font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
+    font-family: museo_sans300;
     font-size: 14px;
     line-height: 1.42857143;
     color: #333;
@@ -17298,5 +17298,9 @@ abbr[title] {
 }
 
 .options-personalizationstring {
-	font-family: sans-serif;
+	font-family: museo_sans300;
+}
+
+option{
+	font-family: museo_sans300 !important;
 }
