update css dashboard

--- a/public/mcapp/css/styles.css
+++ b/public/mcapp/css/styles.css
@@ -734,6 +734,6 @@ html {
 }
 
 .header-dashboard{
-  padding-top:14px;
-  padding-bottom:15px;
+  padding-top:14px !important;
+  padding-bottom:15px!important;
 }
